[gd_scene load_steps=6 format=2]

[ext_resource path="res://BehaviourPlacer/BehaviourPlacer.gd" type="Script" id=1]
[ext_resource path="res://BehaviourPlacer/arrow.png" type="Texture" id=2]
[ext_resource path="res://BehaviourPlacer/outline.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.156863 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 1.5

[node name="BehaviourPlacer" type="Node2D"]
script = ExtResource( 1 )
valid_color = Color( 1, 1, 1, 1 )
invalid_color = Color( 1, 0, 0, 1 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 1, 1, 0.392157 )
begin_cap_mode = 1
sharp_limit = 0.0
round_precision = 10

[node name="ArrowSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.392157 )
z_index = 1
texture = ExtResource( 2 )

[node name="OutlineSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="OutlineSprite"]
anims/Blink = SubResource( 1 )

[node name="CollisionChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionChecker"]
shape = SubResource( 2 )
